src/sections/section3/styles.css
#sec-3 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.fixed-text-container {
  display: none;

  position: fixed;
  top: 0;
  right: 0;
  left: 0;

  height: 100vh;
  z-index: 2;

  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.fixed-text-container h2 {
  font-size: 8rem;
  font-weight: 500;
  color: #fff;
}

.gradient-overflow {
  position: relative;

  width: 100%;
  min-height: 300vh;

  overflow: hidden;
}

.gradient-container {
  position: relative;

  width: 100%;
  min-height: 300vh;

  clip-path: inset(0% -100% 0% 0%);
}

.gradient-cropper {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;

  width: 100%;
  height: 300vh;

  overflow: hidden;
}

.gradient {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;

  width: 100%;
  min-height: 300vh;

  z-index: 5;

  background: linear-gradient(180deg, #ffffff 0%, #ec38bc 60%, #7303c0 120%);
}

.gradient-container h3 {
  font-size: 4rem;
  font-weight: 500;
  color: #fff;

  position: absolute;
  left: 5%;
  bottom: 3%;

  text-align: left;

  z-index: 15;
}

.gradient-container .iphone {
  width: 30%;
  rotate: 15deg;

  position: absolute;
  bottom: -2%;
  right: 0%;

  z-index: 15;
}

@media screen and (max-width: 1200px) {
  .fixed-text-container h2 {
    font-size: 6rem;
  }
  .gradient-container h3 {
    font-size: 3rem;
    bottom: 2.5%;
  }
}

@media screen and (max-width: 900px) {
  .fixed-text-container h2 {
    font-size: 4rem;
  }
  .gradient-container h3 {
    font-size: 2.5rem;
    bottom: 2%;
  }
}

@media screen and (max-width: 750px) {
  .fixed-text-container h2 {
    font-size: 2.5rem;
  }
  .gradient-container h3 {
    font-size: 2.5rem;
    bottom: 14%;
    left: 8%;
  }
  .gradient-container .iphone {
    width: 38%;
  }
}

@media screen and (max-width: 550px) {
  .fixed-text-container h2 {
    font-size: 2rem;
  }
  .gradient-container h3 {
    font-size: 2rem;
    bottom: 15%;
  }
  .gradient-container .iphone {
    width: 45%;
  }
}

@media screen and (max-width: 400px) {
  .gradient-container .iphone {
    width: 50%;
  }
}

/* Iwatch */

.iwatch-content-container {
  position: relative;
  width: 100%;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  bottom: 6rem;
  --wspl: 36rem;
}

.iwatch {
  width: 20rem;

  position: absolute;
  top: 0;
  bottom: 0;
  margin: auto;

  padding-left: 0rem;

  transition: padding-left 1s ease-out;
}

.iwatch-text-container {
  background-color: #f3f3f3;
  border-radius: 50px;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  width: 25rem;
  height: 15rem;
}

.iwatch-text-container h3 {
  color: var(--dark-heading);
  font-size: 2rem;
  font-weight: 500;
}

@media screen and (max-width: 900px) {
  .iwatch-content-container {
    --wspl: 27rem;
  }
  .iwatch-text-container h3 {
    font-size: 1.5rem;
  }
  .iwatch-text-container {
    width: 20rem;
    height: 10rem;
  }
  .iwatch {
    width: 15rem;
  }
}

@media screen and (max-width: 750px) {
  .iwatch-content-container {
    --wspl: 18rem;
  }
  .iwatch-text-container h3 {
    font-size: 1rem;
  }
  .iwatch-text-container {
    width: 12rem;
    height: 6rem;
    border-radius: 20px;
  }
  .iwatch {
    width: 10rem;
  }
}

.media-container {
  min-height: 100vh;
  width: 100%;

  position: sticky;
  top: 0;
  left: 0;
  right: 0;

  z-index: 10;
}

.media-absolute {
  position: absolute;
  inset: 0;

  min-height: 100vh;
  width: 100%;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  transition: opacity 0.8s linear;
}

.media-container h3 {
  font-size: 5rem;
  font-weight: 500;
  color: var(--dark-heading);
}

.media-container p {
  font-size: 1rem;
  padding-top: 0.8rem;

  color: var(--dark-para);
}

.echo-container {
  height: fit-content;
  padding: 10rem 0;

  width: 100%;
  overflow: hidden;

  position: relative;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  z-index: 20;
}

.echo-main {
  width: 140%;
}

@media screen and (max-width: 1000px) {
  .media-container h3 {
    font-size: 3rem;
  }
}

@media screen and (max-width: 900px) {
  .echo-main {
    width: auto;
    height: 150vh;
  }
}

@media screen and (max-width: 550px) {
  .media-container h3 {
    font-size: 2rem;
  }
  .media-container p {
    font-size: 0.8rem;
  }
}

